--- a/style.css
+++ b/style.css
@@ -8,6 +8,14 @@
 
 body {
   font-family: "Poppins", sans-serif;
+  background-color: rgb(14, 14, 14);
+}
+
+.container {
+  width: 100%;
+  max-width: 1300px;
+  padding: 0px 20px;
+  margin: 0 auto;
 }
 
 .main {
@@ -17,7 +25,6 @@ body {
   flex-direction: column;
   height: 100vh;
   gap: 20px;
-  background-color: rgb(14, 14, 14);
 }
 
 .timer {
@@ -176,4 +183,62 @@ body {
 
 .sec:active {
   background-color: rgb(43, 43, 43);
+}
+
+.second_div {
+  display: flex;
+  gap: 40px;
+}
+
+@media screen and (max-width: 1160px) {
+  .score {
+    width: 95%;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .click_box {
+    width: 100%;
+  }
+  .timer_box {
+    width: 100%;
+    gap: 20px;
+  }
+  .second_div {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .score {
+    width: 100%;
+    height: 100%;
+    border: none;
+    border-radius: 0px;
+    gap: 40px;
+  }
+
+  .score_h2 {
+    font-size: 45px;
+    color: rgb(255, 0, 93);
+    user-select: none;
+  }
+
+  .score_p {
+    font-size: 34px;
+    white-space: nowrap;
+    font-weight: 400;
+    color: rgb(255, 255, 255);
+    user-select: none;
+  }
+
+  .score_btn {
+    margin-top: 50px;
+    font-size: 32px;
+    padding: 20px 30px;
+  }
+
+  .stars {
+    font-size: 45px;
+  }
 }
