--- a/style.css
+++ b/style.css
@@ -10,107 +10,211 @@
 
 body {
   font-family: "Poppins", sans-serif;
-  background-color: rgb(14, 14, 14);
+  line-height: 1.5;
+  background-color: #0c0d0f;
+  color: white;
+  font-size: 18px;
+  max-height: 100vh;
 }
 
 .container {
-  width: 100%;
-  max-width: 1300px;
-  padding: 0px 20px;
+  width: 92%;
+  max-width: 1280px;
   margin: 0 auto;
 }
 
-::selection {
-  background-color: transparent;
-  color: transparent;
+.mainWrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 100vh;
+  gap: 20px;
+}
+header,
+main,
+footer {
+  width: 100%;
+}
+/* header */
+#header {
+  background-color: #151616;
 }
 
-.main {
+.headerBox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 32px;
+  font-weight: 600;
+  padding: 15px 0;
+}
+
+.headerBox h1 {
+  background: -webkit-linear-gradient(
+    45deg,
+    rgb(0, 179, 255) 30%,
+    rgb(255, 115, 0) 70%
+  );
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+/* footer */
+#footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 25px 0;
+  font-weight: 400;
+}
+
+#footer a {
+  color: rgba(255, 255, 255, 0.551);
+}
+
+#footer span {
+  color: white;
+}
+#footer span:hover {
+  color: rgb(90, 247, 255);
+}
+
+/* main */
+.game {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 100vh;
-  gap: 20px;
 }
-
-.timer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 50px;
+.h3 {
+  margin-bottom: 10px;
+  font-size: 28px;
   font-weight: 600;
-  width: 200px;
-  height: 100px;
-  background-color: rgb(127, 127, 127);
-  border: 4px solid rgb(255, 255, 255);
-  border-radius: 20px;
-  user-select: none;
+  color: rgb(255, 235, 235);
+  text-transform: uppercase;
 }
 
+/* timer */
+.timer,
 .count_box {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-weight: 600;
-  color: white;
-  width: 200px;
-  height: 100px;
-  font-size: 50px;
-  background-color: rgb(0, 203, 81);
-  border: 4px solid white;
-  border-radius: 20px;
-  user-select: none;
+  font-size: 40px;
+  font-weight: 500;
+  padding: 12px 80px;
+  background-color: rgb(61, 156, 197);
+  border-radius: 15px;
 }
 
-.h3 {
-  font-size: 30px;
+.timer_box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  flex-direction: column;
+}
+
+.timer_sec {
+  display: flex;
+  gap: 30px;
+}
+
+.sec {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 85px;
+  height: 85px;
+  border-radius: 50%;
   color: white;
-  margin-bottom: -15px;
-  user-select: none;
+  background-color: #353638;
+  font-size: 32px;
+  font-weight: 400;
+  cursor: pointer;
+  letter-spacing: 4px;
+  padding-left: 4px;
+  box-shadow: rgba(105, 105, 105, 0.2) 0px 0px 5px 0px;
+}
+
+.sec:active {
+  background-color: #35363888;
+}
+
+.count_box {
+  background-color: rgb(255, 145, 55);
+  margin-bottom: 20px;
 }
 
 .h3_count {
-  color: rgb(0, 237, 95);
+  margin-top: 20px;
+  color: white;
 }
 
 .click_box {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: white;
-  font-size: 40px;
+  font-size: 50px;
   font-weight: 500;
-  width: 700px;
-  height: 320px;
-  background-color: rgb(255, 0, 93);
-  border-radius: 40px;
-  user-select: none;
-  margin-top: 5px;
-  /* border: 4px solid rgb(255, 255, 255); */
+  width: 100%;
+  height: 300px;
+  background: linear-gradient(
+    45deg,
+    rgb(0, 179, 255) 30%,
+    rgb(255, 115, 0) 70%
+  );
+  border-radius: 20px;
   cursor: pointer;
+  color: black;
 }
 .click_box:active {
-  background-color: rgb(217, 0, 80);
+  background: linear-gradient(
+    45deg,
+    rgb(0, 179, 255) 30%,
+    rgb(255, 115, 0) 70%
+  );
+  opacity: 0.8;
+}
+
+@media only screen and (max-width: 700px) {
+  .click_box {
+    font-size: 40px;
+  }
+}
+@media only screen and (max-width: 460px) {
+  .click_box {
+    font-size: 30px;
+  }
+  .timer_sec {
+    gap: 20px;
+  }
+  .sec {
+    font-size: 22px;
+    width: 60px;
+    height: 60px;
+  }
 }
 
 .score {
   display: none;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  width: 1100px;
-  height: 670px;
-  background-color: rgb(32, 32, 32);
-  border: 4px solid rgb(255, 255, 255);
-  border-radius: 40px;
-  position: absolute;
-  gap: 70px;
+  width: 100%;
+  height: 100vh;
+  background-color: #0c0d0f;
+  position: fixed;
+  gap: 20px;
+  padding: 30px 20px;
+  padding-bottom: 50px;
 }
 
 .score_h2 {
-  font-size: 70px;
-  color: rgb(255, 0, 93);
+  font-size: 60px;
+  font-weight: 600;
+  color: rgb(255, 255, 255);
   user-select: none;
 }
 
@@ -122,14 +226,14 @@ body {
 }
 
 .score_btn {
-  font-size: 35px;
+  font-size: 40px;
   font-weight: 600;
   border: none;
   outline: none;
   padding: 25px 40px;
   border-radius: 10px;
   color: white;
-  background-color: rgb(0, 203, 81);
+  background-color: rgb(0, 175, 70);
   user-select: none;
 }
 
@@ -149,103 +253,50 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  color: rgb(255, 115, 0);
-  font-size: 70px;
+  color: rgb(255, 231, 49);
+  font-size: 90px;
   gap: 15px;
   user-select: none;
 }
 
 .green {
-  color: rgb(0, 237, 95);
+  color: rgb(255, 115, 0);
   font-weight: 600;
 }
 
 .chery {
-  color: rgb(255, 0, 93);
+  color: rgb(0, 179, 255);
   font-weight: 600;
 }
 
-.timer_box {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 40px;
-}
-
-.sec {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 95px;
-  height: 95px;
-  border: 4px solid rgb(255, 255, 255);
-  border-radius: 50%;
-  color: white;
-  background-color: rgb(35, 35, 35);
-  font-size: 22px;
-  font-weight: 600;
-  cursor: pointer;
-  user-select: none;
-}
-
-.sec:active {
-  background-color: rgb(43, 43, 43);
-}
-
-.second_div {
-  display: flex;
-  gap: 40px;
-}
-
-@media screen and (max-width: 1160px) {
-  .score {
-    width: 95%;
-  }
-}
-
-@media screen and (max-width: 800px) {
-  .click_box {
-    width: 100%;
-  }
-  .timer_box {
-    width: 100%;
-    gap: 20px;
-  }
-  .second_div {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-  }
-
-  .score {
-    width: 100%;
-    height: 100%;
-    border: none;
-    border-radius: 0px;
-    gap: 40px;
-  }
-
+@media screen and (max-width: 700px) {
   .score_h2 {
     font-size: 45px;
-    color: rgb(255, 0, 93);
-    user-select: none;
   }
-
   .score_p {
     font-size: 34px;
-    white-space: nowrap;
-    font-weight: 400;
-    color: rgb(255, 255, 255);
-    user-select: none;
   }
-
   .score_btn {
-    margin-top: 50px;
     font-size: 32px;
-    padding: 20px 30px;
+    padding: 25px 45px;
   }
-
   .stars {
     font-size: 45px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .score_h2 {
+    font-size: 36px;
+  }
+  .score_p {
+    font-size: 24px;
+  }
+  .score_btn {
+    font-size: 24px;
+    width: 100%;
+  }
+  .stars {
+    font-size: 40px;
   }
 }
