--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
   color: white;
   font-size: 18px;
   max-height: 100vh;
+  /* overflow: hidden; */
 }
 
 .container {
@@ -29,12 +30,14 @@ body {
   justify-content: space-between;
   align-items: center;
   height: 100vh;
-  gap: 20px;
 }
 header,
 main,
 footer {
   width: 100%;
+}
+main{
+  height: 100%;
 }
 /* header */
 #header {
@@ -83,16 +86,22 @@ footer {
 /* main */
 .game {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   flex-direction: column;
+  height: 100%;
 }
 .h3 {
   margin-bottom: 10px;
+  margin-top: 20px;
   font-size: 28px;
   font-weight: 600;
   color: rgb(255, 235, 235);
   text-transform: uppercase;
+}
+
+.game_box{
+  text-align: center;
 }
 
 /* timer */
@@ -147,19 +156,16 @@ footer {
   margin-bottom: 20px;
 }
 
-.h3_count {
-  margin-top: 20px;
-  color: white;
-}
 
 .click_box {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 50px;
+  font-size: 40px;
   font-weight: 500;
   width: 100%;
-  height: 300px;
+  max-width: 800px;
+  height: 100%;
   background: linear-gradient(
     45deg,
     rgb(0, 179, 255) 30%,
@@ -178,11 +184,6 @@ footer {
   opacity: 0.8;
 }
 
-@media only screen and (max-width: 700px) {
-  .click_box {
-    font-size: 40px;
-  }
-}
 @media only screen and (max-width: 460px) {
   .click_box {
     font-size: 30px;
@@ -206,6 +207,9 @@ footer {
   height: 100vh;
   background-color: #0c0d0f;
   position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 4;
   gap: 20px;
   padding: 30px 20px;
   padding-bottom: 50px;
